--- a/resume.tex
+++ b/resume.tex
@@ -172,16 +172,18 @@
       \resumeProjectHeading
           {\textbf{\href{https://github.com/aniketk13/FarmApp}{Krishi-Sahyog }}{[ Android-Kotlin, FireBase ]}}{March 2023}
           \resumeItemListStart
-          \resumeItem{\textbf{Problem:} Digitally helping Farmers to get fair Crop value}
-          \resumeItem{\textbf{Solution:} Connecting Farmers directly with Buyers, cutting out the middleman and boosting earnings for both parties. Introduced a Bidding System for Buyers to bid on a Farmer's crop listing, providing a fair price and catering to market demand. Full-fledged product offering end-to-end services, including invoicing, contract generation, and Logistic support.}
+          \resumeItem{Revolutionizing Crop Sales with a \textbf{Bidding-introduced} Digital Marketplace}
+          \resumeItem{Incorporated \textbf{MVVM} Architecture, Portal separation for both Farmer and Trader, used \textbf{Firebase} tools like \textbf{Auth}, \textbf{Firestore}, and \textbf{Storage}. \textbf{Multi-Language support} built with \textbf{Locale}}
+          \resumeItem{Increased earnings for Farmers and Received recognition from \textbf{Rajasthan CM}}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
  \resumeSubHeadingListStart
       \resumeProjectHeading
           {\textbf{\href{https://github.com/itsnitish22/Sign-Ease}{Sign-Ease }}{[ Android-Kotlin, Hello-Sign API (Dropbox), FireBase ]}}{September 2022}
           \resumeItemListStart
-          \resumeItem{\textbf{Problem:} Digital Approvals in documents/leaves for hostel \& college students}
-          \resumeItem{\textbf{Solution:} Developed an Application for CRUD operations on Signature Requests with pre-built Templates and to-the-point information. The project gets your applications signed by the respective authority seamlessly hence saving time, labor as well as Paper. Real-time application tracking enabled to check request status.}
+          \resumeItem{A Digital platform to \textbf{Sign} and \textbf{track} all Hostel Leaves}
+          \resumeItem{Using \textbf{Hello Sign API}, built a \textbf{CRUD} App along with \textbf{Client-Data separation.} MVVM with \textbf{Retrofit} dependency, \textbf{Data class} for response parsing, and \textbf{QR generation} with \textbf{embedded URLs}}
+          \resumeItem{Digital and Legal record of Leaves pooled with over \textbf{10,000+ Student's safety}}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
     
@@ -189,8 +191,9 @@
       \resumeProjectHeading
           {\textbf{\href{https://github.com/aniketk13/Intelli-Tags}{Intelli-Tags }}{[ Android-Kotlin, Modzy APIs, AWS ]}}{Dec 2021}
           \resumeItemListStart
-          \resumeItem{\textbf{Problem:} Instant Hashtags generator for blogs and media content for adequate promotion}
-          \resumeItem{\textbf{Solution:} Built an Application using Modzy (now Smarty) ML models (APIs) which analyses Media files like Text, Images, and Video and instantly generates relevant Social Media Tags for your Content thus Boosting their engagement and reach by up to 2x globally.}
+          \resumeItem{Instant \textbf{Hashtags generator} for blogs and media content for adequate promotion}
+          \resumeItem{Built an App using \textbf{Modzy ML models (APIs)} to display hashtags. Used \textbf{Tabbed Activity} layout for various media and integrated \textbf{Copy} as well as \textbf{Share} feature. \textbf{AWS SDK} integrated to upload media}
+          \resumeItem{Potential to organically promote your content upto 2x}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
     
@@ -198,18 +201,19 @@
       \resumeProjectHeading
           {\textbf{\href{https://github.com/aniketk13/Feedback-Prime}{Feedback Prime }}{[ Android-Kotlin, Symbl.ai API, Sawo-Labs API ]}}{Oct 2021}
           \resumeItemListStart
-           \resumeItem{\textbf{Problem:} Smart Feedback Analysis for Support Engineers to avoid useless Feedback/Survey forms}
-           \resumeItem{\textbf{Solution:} Using Symbl.ai Async API and Conversation-intelligence, created an app that analyses the Media file and processes it to Auto-generate a detailed Feedback Report of the Conversation that reduces manual work for both Engineers and the Customers.} \newline
+           \resumeItem{\textbf{Smart Feedback Analysis} for Support Calls}
+           \resumeItem{Used \textbf{Symbl.ai Async API} and Sentiment Analysis to generate the report. \textbf{Retrofit} to make the Network Calls, \textbf{handled delays}, and used \textbf{RecyclerView} to display data }
+           \resumeItem{Avoids useless Feedback forms and helps the Support Engineers.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 %-----------PROGRAMMING SKILLS-----------
 \section{\textbf{Technical Skills}}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Kotlin, Java, C++, JavaScript, Python} \\
-     \textbf{Frameworks}{: PostgreSQL, Firebase, Node.js, Express  } \\
-     \textbf{Developer Tools}{: Android-Studio, Azure, AWS, Postman, Google Cloud, Docker } \\
-     \textbf{Libraries}{: MongoDB, Volley, Material Ui, Room, Retrofit  }
+     \textbf{Languages}{: Kotlin, Java, C++} \\
+     \textbf{Frameworks}{: PostgreSQL, Firebase, Node.js } \\
+     \textbf{Developer Tools}{: Android-Studio, Azure, AWS, Postman, Google Cloud} \\
+     \textbf{Libraries}{: Room, Retrofit, MongoDB, Volley, Material Ui  }
     }} 
  \end{itemize}
    
@@ -222,7 +226,6 @@
                 \resumeItem{\textbf{\href{https://www.linkedin.com/learning/certificates/0f804705fc3f345406c7a7ccdc10ec244d4384268e86e94bc5eafd52f67755d0}{Android Development: Retrofit with Kotlin}}} 
 
                 \resumeItem{\textbf{{Cisco Networking Essentials}}}
-                \newline
       \resumeItemListEnd
     }}
  \end{itemize}
