--- a/resume.tex
+++ b/resume.tex
@@ -19,6 +19,9 @@
 \usepackage[english]{babel}
 \usepackage{tabularx}
 \usepackage{xcolor}
+\usepackage{fontawesome5}
+\usepackage{academicons}
+
 \input{glyphtounicode}
 
 
@@ -173,16 +176,16 @@
           {\textbf{\href{https://github.com/aniketk13/FarmApp}{Krishi-Sahyog }}{[ Android-Kotlin, FireBase ]}}{March 2023}
           \resumeItemListStart
           \resumeItem{Revolutionizing Crop Sales with a \textbf{Bidding-introduced} Digital Marketplace}
-          \resumeItem{Incorporated \textbf{MVVM} Architecture, Portal separation for both Farmer and Trader, used \textbf{Firebase} tools like \textbf{Auth}, \textbf{Firestore}, and \textbf{Storage}. \textbf{Multi-Language support} built with \textbf{Locale}}
+          \resumeItem{Incorporated \textbf{MVVM} Architecture, Portal separation for both Farmer and Trader, used \textbf{Firebase} tools like \textbf{Auth}, \textbf{Firestore}, and \textbf{Storage}. \textbf{Multi-Language support} integrated with \textbf{Locale}}
           \resumeItem{Increased earnings for Farmers and Received recognition from \textbf{Rajasthan CM}}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
  \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{\href{https://github.com/itsnitish22/Sign-Ease}{Sign-Ease }}{[ Android-Kotlin, Hello-Sign API (Dropbox), FireBase ]}}{September 2022}
+          {\textbf{\href{https://github.com/itsnitish22/Sign-Ease}{Sign-Ease }}\textbf{\href{https://play.google.com/store/apps/details?id=com.teamdefine.signease}{(Play-Store) }}{[ Android-Kotlin, Hello-Sign API (Dropbox), FireBase ]}}{September 2022}
           \resumeItemListStart
           \resumeItem{A Digital platform to \textbf{Sign} and \textbf{track} all Hostel Leaves}
-          \resumeItem{Using \textbf{Hello Sign API}, built a \textbf{CRUD} App along with \textbf{Client-Data separation.} MVVM with \textbf{Retrofit} dependency, \textbf{Data class} for response parsing, and \textbf{QR generation} with \textbf{embedded URLs}}
+          \resumeItem{Using \textbf{Hello Sign API}, made a \textbf{CRUD} App along with \textbf{Client-Data separation.} MVVM with \textbf{Retrofit} dependency, \textbf{Data class} for response parsing, and \textbf{QR generation} with \textbf{embedded URLs}}
           \resumeItem{Digital and Legal record of Leaves pooled with over \textbf{10,000+ Student's safety}}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
@@ -212,7 +215,7 @@
     \small{\item{
      \textbf{Languages}{: Kotlin, Java, C++} \\
      \textbf{Frameworks}{: PostgreSQL, Firebase, Node.js } \\
-     \textbf{Developer Tools}{: Android-Studio, Azure, AWS, Postman, Google Cloud} \\
+     \textbf{Developer Tools}{: GitHub, Android-Studio, Azure, AWS, Postman, Google Cloud} \\
      \textbf{Libraries}{: Room, Retrofit, MongoDB, Volley, Material Ui  }
     }} 
  \end{itemize}
