--- a/resume.tex
+++ b/resume.tex
@@ -72,9 +72,10 @@
   }
 }
 \hypersetup{%
-  colorlinks=false,% hyperlinks will be coloured
+  colorlinks=true,% hyperlinks will be coloured
   linkcolor=blue,% hyperlink text will be green
   linkbordercolor=blue,% hyperlink border will be red
+  urlcolor=blue
 }
 
 \newcommand{\resumeSubheading}[4]{
@@ -160,8 +161,8 @@
 \section{\textbf{Education}}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Chandigarh University - 8.39 CGPA}{Mohali, Punjab}
-      {Junior, B.E in Computer Science and Engineering}{August 2020 -- August 2024*}
+      {Chandigarh University - 8.23 CGPA}{Mohali, Punjab}
+      {Final Year, B.E in Computer Science and Engineering}{August 2020 -- August 2024*}
   \resumeSubHeadingListEnd
   \resumeSubHeadingListStart
     \resumeSubheading
@@ -173,7 +174,7 @@
 \section{\newline \textbf{Projects}}
 \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{\href{https://github.com/aniketk13/FarmApp}{Krishi-Sahyog }}{[ Android-Kotlin, FireBase ]}}{March 2023}
+           {\textbf{Krishi-Sahyog }$|$ {Android-Kotlin, FireBase} $|$ \textbf{\href{https://github.com/aniketk13/FarmApp}{GitHub}}}{March 2023}
           \resumeItemListStart
           \resumeItem{Revolutionizing Crop Sales with a \textbf{Bidding-introduced} Digital Marketplace}
           \resumeItem{Incorporated \textbf{MVVM} Architecture, Portal separation for both Farmer and Trader, used \textbf{Firebase} tools like \textbf{Auth}, \textbf{Firestore}, and \textbf{Storage}. \textbf{Multi-Language support} integrated with \textbf{Locale}}
@@ -182,7 +183,7 @@
     \resumeSubHeadingListEnd
  \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{\href{https://github.com/itsnitish22/Sign-Ease}{Sign-Ease }}\textbf{\href{https://play.google.com/store/apps/details?id=com.teamdefine.signease}{(Play-Store) }}{[ Android-Kotlin, Hello-Sign API (Dropbox), FireBase ]}}{September 2022}
+          {\textbf{Sign-Ease }$|${ Android-Kotlin, Hello-Sign API (Dropbox), FireBase} $|$ \textbf{\href{https://play.google.com/store/apps/details?id=com.teamdefine.signease}{Play Store}} }{September 2022}
           \resumeItemListStart
           \resumeItem{A Digital platform to \textbf{Sign} and \textbf{track} all Hostel Leaves}
           \resumeItem{Using \textbf{Hello Sign API}, made a \textbf{CRUD} App along with \textbf{Client-Data separation.} MVVM with \textbf{Retrofit} dependency, \textbf{Data class} for response parsing, and \textbf{QR generation} with \textbf{embedded URLs}}
@@ -192,7 +193,7 @@
     
  \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{\href{https://github.com/aniketk13/Intelli-Tags}{Intelli-Tags }}{[ Android-Kotlin, Modzy APIs, AWS ]}}{Dec 2021}
+          {\textbf{Intelli-Tags }$|${ Android-Kotlin, Modzy APIs, AWS} $|$ \textbf{\href{https://github.com/aniketk13/Intelli-Tags}{GitHub}}}{December 2021}
           \resumeItemListStart
           \resumeItem{Instant \textbf{Hashtags generator} for blogs and media content for adequate promotion}
           \resumeItem{Built an App using \textbf{Modzy ML models (APIs)} to display hashtags. Used \textbf{Tabbed Activity} layout for various media and integrated \textbf{Copy} as well as \textbf{Share} feature. \textbf{AWS SDK} integrated to upload media}
@@ -202,7 +203,7 @@
     
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{\href{https://github.com/aniketk13/Feedback-Prime}{Feedback Prime }}{[ Android-Kotlin, Symbl.ai API, Sawo-Labs API ]}}{Oct 2021}
+          {\textbf{Feedback Prime }$|${ Android-Kotlin, Symbl.ai API, Sawo-Labs API } $|$ \textbf{\href{https://github.com/aniketk13/Feedback-Prime}{GitHub}}}{October 2021}
           \resumeItemListStart
            \resumeItem{\textbf{Smart Feedback Analysis} for Support Calls}
            \resumeItem{Used \textbf{Symbl.ai Async API} and Sentiment Analysis to generate the report. \textbf{Retrofit} to make the Network Calls, \textbf{handled delays}, and used \textbf{RecyclerView} to display data }
@@ -213,7 +214,7 @@
 \section{\textbf{Technical Skills}}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Kotlin, Java, C++} \\
+     \textbf{Languages}{: Kotlin, C++, Java} \\
      \textbf{Frameworks}{: PostgreSQL, Firebase, Node.js } \\
      \textbf{Developer Tools}{: GitHub, Android-Studio, Azure, AWS, Postman, Google Cloud} \\
      \textbf{Libraries}{: Room, Retrofit, MongoDB, Volley, Material Ui  }
@@ -225,8 +226,8 @@
     \small{\item{
         \resumeItemListStart
                 % \resumeItem{\textbf{\href{Link if any}{Best Achievement on Top}}: Write the best and coolest achievement on top.}
-                \resumeItem{\textbf{\href{https://www.linkedin.com/learning/certificates/0678a1527860b8e6ba5694ca1c73c5bab5c3463b8bb5d6c3b9a1fcc19be38ce9}{Building an Android App with Jetpack Libraries}}}
-                \resumeItem{\textbf{\href{https://www.linkedin.com/learning/certificates/0f804705fc3f345406c7a7ccdc10ec244d4384268e86e94bc5eafd52f67755d0}{Android Development: Retrofit with Kotlin}}} 
+                \resumeItem{\textbf{{Building an Android App with Jetpack Libraries}}}
+                \resumeItem{\textbf{{Android Development: Retrofit with Kotlin}}} 
 
                 \resumeItem{\textbf{{Cisco Networking Essentials}}}
       \resumeItemListEnd
@@ -241,10 +242,10 @@
         \resumeItemListStart
                 % \resumeItem{\textbf{\href{Link if any}{Best Achievement on Top}}: Write the best and coolest achievement on top.}
                 \resumeItem{\textbf{Led a team to {Top-10 in API Fest} organized by Postman}: A global event to spread awareness about APIs and encourage peers to learn and build a product}
-                \resumeItem{\textbf{{Won \href{https://devpost.com/software/feedback-prime-kbg8um}{API World Hackathon's} and {API-Hacks'} Sponsor Track from Symbl.ai for Feedback Prime} }: Received recommendation from Symbl.ai to use this as an actual business model}
+                \resumeItem{\textbf{{Won {API World Hackathon's} and {API-Hacks'} Sponsor Track from Symbl.ai for Feedback Prime} }: Received recommendation from Symbl.ai to use this as an actual business model}
                 % \resumeItem{\textbf{\href{https://devpost.com/software/cryptodrive}{Write some winning stuff here}}}
-                \resumeItem{\textbf{\href{https://studentambassadors.microsoft.com/en-US/profile/124303}{Microsoft Student Ambassador-Alpha}} : One of the biggest global community which brings students from all over the world who are passionate of technology, learning and helping the community }
-                \resumeItem{\textbf{\href{https://api.badgr.io/public/assertions/smxpDApNQkawRdyLq88rTA}{ Postman Student Expert}} : A program designed to spread API knowledge and help the students get trained on APIs.}
+                \resumeItem{\textbf{{Microsoft Student Ambassador-Alpha}}: One of the biggest global communities which bring students from all over the world who are passionate about technology, learning, and helping the community }
+                \resumeItem{\textbf{{Postman Student Expert}}: A program designed to spread API knowledge and help students get trained on APIs and their testing.}
       \resumeItemListEnd
     }}
  \end{itemize}
