--- a/resume.tex
+++ b/resume.tex
@@ -123,58 +123,45 @@
   \textbf{LeetCode: }~\href{https://leetcode.com/aniketk13/}{leetcode.com/aniketk13/} & \textbf{LinkedIn: }~\href{https://www.linkedin.com/in/aniketkhajanchi/}{linkedin.com/in/aniketkhajanchi}
 \end{tabular*}
 
-% %-----------EXPERIENCE-----------
-% \section{Experience}
-%   \resumeSubHeadingListStart
-% % -----------Multiple Positions Heading-----------
-% %    \resumeSubSubheading
-% %     {Software Engineer I}{Oct 2014 - Sep 2016}
-% %     \resumeItemListStart
-% %        \resumeItem{Apache Beam}
-% %          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
-% %     \resumeItemListEnd
-% %    \resumeSubHeadingListEnd
-% %-------------------------------------------
-%     \resumeSubheading
-%       {Company Name}{Location}
-%       {Role}{Start Month - Present or End Month}
-%       \resumeItemListStart
-%         \resumeItem{Create XXXXXXX. }
-%         \resumeItem{Research XXXXXX.}
-%         \resumeItem{Improve XXXXX. }
-        
-    
-%       \resumeItemListEnd
-%     \resumeSubheading
-%      {Company Name}{Location}
-%       {Role}{Start Month - Present or End Month}
-%       \resumeItemListStart
-%         \resumeItem{Developed XXXXXXX. }
-%         \resumeItem{Research XXXXXX.}
-%         \resumeItem{Awarded XXXXX. }
-%      \resumeItemListEnd
-
-
-%   \resumeSubHeadingListEnd
-
 %-----------EDUCATION-----------
 \section{\textbf{Education}}
   \resumeSubHeadingListStart
     \resumeSubheading
       {Chandigarh University - 8.23 CGPA}{Mohali, Punjab}
-      {Final Year, B.E in Computer Science and Engineering}{August 2020 -- August 2024*}
-  \resumeSubHeadingListEnd
-  \resumeSubHeadingListStart
+      {Final Year, B.E in Computer Science and Engineering}{August 2020 $-$ August 2024*}
+  % \resumeSubHeadingListEnd
+  % \resumeSubHeadingListStart
     \resumeSubheading
       {Hem Sheela Model School - 94.6\%}{Durgapur, West Bengal}
-      {12th, Non-Medical Computer Science}{April 2018 -- March 2020 } 
+      {12th, Non-Medical Computer Science}{April 2018 $-$ March 2020 } 
   \resumeSubHeadingListEnd
   
+% %-----------EXPERIENCE-----------
+\section{\textbf{Experience}}
+  \resumeSubHeadingListStart
+% -----------Multiple Positions Heading-----------
+%    \resumeSubSubheading
+%     {Software Engineer I}{Oct 2014 - Sep 2016}
+%     \resumeItemListStart
+%        \resumeItem{Apache Beam}
+%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
+%     \resumeItemListEnd
+%    \resumeSubHeadingListEnd
+%-------------------------------------------
+    \resumeSubheading
+      {Nokia Solutions Networks}{Gurugram}
+      {Student Intern}{July 2023 - Present}
+      \resumeItemListStart
+        \resumeItem{Working on the NCC product, a Multi-Vendor support Application with Monetization of services }
+        \resumeItem{Involved in the Development and Deployment of NCC, along with Building Solutions like real-time Rating and Charging for CSPs and Enterprises.  }
+      \resumeItemListEnd
+  \resumeSubHeadingListEnd
+
 %-----------PROJECTS-----------
-\section{\newline \textbf{Projects}}
+\section{\textbf{Projects}}
 \resumeSubHeadingListStart
       \resumeProjectHeading
-           {\textbf{Krishi-Sahyog }$|$ {Android-Kotlin, FireBase} $|$ \textbf{\href{https://github.com/aniketk13/FarmApp}{GitHub}}}{March 2023}
+          {\textbf{Krishi-Sahyog } $|$ {Android-Kotlin, FireBase} $|$ \textbf{\href{https://github.com/aniketk13/FarmApp}{GitHub}}}{March 2023}
           \resumeItemListStart
           \resumeItem{Revolutionizing Crop Sales with a \textbf{Bidding-introduced} Digital Marketplace}
           \resumeItem{Incorporated \textbf{MVVM} Architecture, Portal separation for both Farmer and Trader, used \textbf{Firebase} tools like \textbf{Auth}, \textbf{Firestore}, and \textbf{Storage}. \textbf{Multi-Language support} integrated with \textbf{Locale}}
@@ -183,7 +170,7 @@
     \resumeSubHeadingListEnd
  \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Sign-Ease }$|${ Android-Kotlin, Hello-Sign API (Dropbox), FireBase} $|$ \textbf{\href{https://play.google.com/store/apps/details?id=com.teamdefine.signease}{Play Store}} }{September 2022}
+          {\textbf{Sign-Ease } $|${ Android-Kotlin, Hello-Sign API (Dropbox), FireBase} $|$ \textbf{\href{https://play.google.com/store/apps/details?id=com.teamdefine.signease}{Play Store}} }{September 2022}
           \resumeItemListStart
           \resumeItem{A Digital platform to \textbf{Sign} and \textbf{track} all Hostel Leaves}
           \resumeItem{Using \textbf{Hello Sign API}, made a \textbf{CRUD} App along with \textbf{Client-Data separation.} MVVM with \textbf{Retrofit} dependency, \textbf{Data class} for response parsing, and \textbf{QR generation} with \textbf{embedded URLs}}
@@ -191,15 +178,15 @@
           \resumeItemListEnd
     \resumeSubHeadingListEnd
     
- \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{Intelli-Tags }$|${ Android-Kotlin, Modzy APIs, AWS} $|$ \textbf{\href{https://github.com/aniketk13/Intelli-Tags}{GitHub}}}{December 2021}
-          \resumeItemListStart
-          \resumeItem{Instant \textbf{Hashtags generator} for blogs and media content for adequate promotion}
-          \resumeItem{Built an App using \textbf{Modzy ML models (APIs)} to display hashtags. Used \textbf{Tabbed Activity} layout for various media and integrated \textbf{Copy} as well as \textbf{Share} feature. \textbf{AWS SDK} integrated to upload media}
-          \resumeItem{Potential to organically promote your content upto 2x}
-          \resumeItemListEnd
-    \resumeSubHeadingListEnd
+ % \resumeSubHeadingListStart
+ %      \resumeProjectHeading
+ %          {\textbf{\href{https://github.com/aniketk13/Intelli-Tags}{Intelli-Tags }}{[ Android-Kotlin, Modzy APIs, AWS ]}}{Dec 2021}
+ %          \resumeItemListStart
+ %          \resumeItem{Instant \textbf{Hashtags generator} for blogs and media content for adequate promotion}
+ %          \resumeItem{Built an App using \textbf{Modzy ML models (APIs)} to display hashtags. Used \textbf{Tabbed Activity} layout for various media and integrated \textbf{Copy} as well as \textbf{Share} feature. \textbf{AWS SDK} integrated to upload media}
+ %          \resumeItem{Potential to organically promote your content upto 2x}
+ %          \resumeItemListEnd
+ %    \resumeSubHeadingListEnd
     
     \resumeSubHeadingListStart
       \resumeProjectHeading
@@ -214,7 +201,7 @@
 \section{\textbf{Technical Skills}}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Kotlin, C++, Java} \\
+     \textbf{Languages}{: Kotlin, Java, C++} \\
      \textbf{Frameworks}{: PostgreSQL, Firebase, Node.js } \\
      \textbf{Developer Tools}{: GitHub, Android-Studio, Azure, AWS, Postman, Google Cloud} \\
      \textbf{Libraries}{: Room, Retrofit, MongoDB, Volley, Material Ui  }
@@ -229,23 +216,23 @@
                 \resumeItem{\textbf{{Building an Android App with Jetpack Libraries}}}
                 \resumeItem{\textbf{{Android Development: Retrofit with Kotlin}}} 
 
-                \resumeItem{\textbf{{Cisco Networking Essentials}}}
+                \resumeItem{\textbf{{Cisco Networking Essentials}}} 
       \resumeItemListEnd
     }}
  \end{itemize}
     
 
 
-\section{\textbf{Awards and Volunteer Experience} }
+\section{\newline{\textbf{Awards and Volunteer Experience}}}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
         \resumeItemListStart
                 % \resumeItem{\textbf{\href{Link if any}{Best Achievement on Top}}: Write the best and coolest achievement on top.}
                 \resumeItem{\textbf{Led a team to {Top-10 in API Fest} organized by Postman}: A global event to spread awareness about APIs and encourage peers to learn and build a product}
-                \resumeItem{\textbf{{Won {API World Hackathon's} and {API-Hacks'} Sponsor Track from Symbl.ai for Feedback Prime} }: Received recommendation from Symbl.ai to use this as an actual business model}
+                \resumeItem{\textbf{{Won \href{https://devpost.com/software/feedback-prime-kbg8um}{API World Hackathon's} and {API-Hacks'} Sponsor Track from Symbl.ai for Feedback Prime} }: Received recommendation from Symbl.ai to use this as an actual business model}
                 % \resumeItem{\textbf{\href{https://devpost.com/software/cryptodrive}{Write some winning stuff here}}}
-                \resumeItem{\textbf{{Microsoft Student Ambassador-Alpha}}: One of the biggest global communities which bring students from all over the world who are passionate about technology, learning, and helping the community }
-                \resumeItem{\textbf{{Postman Student Expert}}: A program designed to spread API knowledge and help students get trained on APIs and their testing.}
+                \resumeItem{\textbf{{Microsoft Student Ambassador-Alpha}} : One of the biggest global community which brings students from all over the world who are passionate of technology, learning and helping the community }
+                \resumeItem{\textbf{{ Postman Student Expert}} : A program designed to spread API knowledge and help the students get trained on APIs.}
       \resumeItemListEnd
     }}
  \end{itemize}
