--- a/resume.tex
+++ b/resume.tex
@@ -149,11 +149,12 @@
 %    \resumeSubHeadingListEnd
 %-------------------------------------------
     \resumeSubheading
-      {Nokia Solutions Networks}{Gurugram}
-      {Student Intern}{July 2023 - Present}
-      \resumeItemListStart
-        \resumeItem{Working on the NCC product, a Multi-Vendor support Application with Monetization of services }
-        \resumeItem{Involved in the Development and Deployment of NCC, along with Building Solutions like real-time Rating and Charging for CSPs and Enterprises.  }
+      {Nokia Solutions Networks}{Gurugram, Haryana}
+      {SDE Intern}{July 2023 - Present}
+      \vspace{1pt}\resumeItemListStart
+        \resumeItem{ Conducted extensive research for integrating advanced conversational AI support for a client-centric project }
+        \resumeItem{Transformed 50+ client's engagement with a first-level interaction strategy using Retrieval Augmented Generation(RAG) and built a real-time sync with Jira  }
+        \resumeItem{Drove the reduction of support tickets by 2x and optimised the query response time by 57\% }
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -163,9 +164,9 @@
       \resumeProjectHeading
           {\textbf{Krishi-Sahyog } $|$ {Android-Kotlin, FireBase} $|$ \textbf{\href{https://github.com/aniketk13/FarmApp}{GitHub}}}{March 2023}
           \resumeItemListStart
-          \resumeItem{Revolutionizing Crop Sales with a \textbf{Bidding-introduced} Digital Marketplace}
+          \resumeItem{Revolutionizing crop sales with a \textbf{Bidding-introduced} digital marketplace}
           \resumeItem{Incorporated \textbf{MVVM} Architecture, Portal separation for both Farmer and Trader, used \textbf{Firebase} tools like \textbf{Auth}, \textbf{Firestore}, and \textbf{Storage}. \textbf{Multi-Language support} integrated with \textbf{Locale}}
-          \resumeItem{Increased earnings for Farmers and Received recognition from \textbf{Rajasthan CM}}
+          \resumeItem{Increased earnings for farmers and received recognition from \textbf{Rajasthan CM}}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
  \resumeSubHeadingListStart
@@ -173,8 +174,8 @@
           {\textbf{Sign-Ease } $|${ Android-Kotlin, Hello-Sign API (Dropbox), FireBase} $|$ \textbf{\href{https://play.google.com/store/apps/details?id=com.teamdefine.signease}{Play Store}} }{September 2022}
           \resumeItemListStart
           \resumeItem{A Digital platform to \textbf{Sign} and \textbf{track} all Hostel Leaves}
-          \resumeItem{Using \textbf{Hello Sign API}, made a \textbf{CRUD} App along with \textbf{Client-Data separation.} MVVM with \textbf{Retrofit} dependency, \textbf{Data class} for response parsing, and \textbf{QR generation} with \textbf{embedded URLs}}
-          \resumeItem{Digital and Legal record of Leaves pooled with over \textbf{10,000+ Student's safety}}
+          \resumeItem{Using \textbf{Hello Sign API}, made a \textbf{CRUD} App along with \textbf{client-data separation.} MVVM with \textbf{Retrofit} dependency, \textbf{Data class} for response parsing, and \textbf{QR generation} with \textbf{embedded URLs}}
+          \resumeItem{Digital and Legal record of leaves pooled with over \textbf{10,000+ Student's safety}}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
     
@@ -201,7 +202,7 @@
 \section{\textbf{Technical Skills}}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Kotlin, Java, C++} \\
+     \textbf{Languages}{: Kotlin, C++, Java, Python} \\
      \textbf{Frameworks}{: PostgreSQL, Firebase, Node.js } \\
      \textbf{Developer Tools}{: GitHub, Android-Studio, Azure, AWS, Postman, Google Cloud} \\
      \textbf{Libraries}{: Room, Retrofit, MongoDB, Volley, Material Ui  }
@@ -223,7 +224,7 @@
     
 
 
-\section{\newline{\textbf{Awards and Volunteer Experience}}}
+\vspace{1pt}\section{\textbf{Awards and Volunteer Experience}}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
         \resumeItemListStart
