--- a/resume.tex
+++ b/resume.tex
@@ -123,18 +123,7 @@
   \textbf{LeetCode: }~\href{https://leetcode.com/aniketk13/}{leetcode.com/aniketk13/} & \textbf{LinkedIn: }~\href{https://www.linkedin.com/in/aniketkhajanchi/}{linkedin.com/in/aniketkhajanchi}
 \end{tabular*}
 
-%-----------EDUCATION-----------
-\section{\textbf{Education}}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {Chandigarh University - 8.23 CGPA}{Mohali, Punjab}
-      {Final Year, B.E in Computer Science and Engineering}{August 2020 $-$ August 2024*}
-  % \resumeSubHeadingListEnd
-  % \resumeSubHeadingListStart
-    \resumeSubheading
-      {Hem Sheela Model School - 94.6\%}{Durgapur, West Bengal}
-      {12th, Non-Medical Computer Science}{April 2018 $-$ March 2020 } 
-  \resumeSubHeadingListEnd
+
   
 % %-----------EXPERIENCE-----------
 \section{\textbf{Experience}}
@@ -149,12 +138,15 @@
 %    \resumeSubHeadingListEnd
 %-------------------------------------------
     \resumeSubheading
-      {Nokia Solutions Networks}{Gurugram, Haryana}
-      {SDE Intern}{July 2023 - Present}
+      {Nokia}{Gurugram, Haryana}
+      {AI Research \& Development Intern}{July 2023 - Present}
       \vspace{1pt}\resumeItemListStart
-        \resumeItem{ Conducted extensive research for integrating advanced conversational AI support for a client-centric project }
-        \resumeItem{Transformed 50+ client's engagement with a first-level interaction strategy using Retrieval Augmented Generation(RAG) and built a real-time sync with Jira  }
-        \resumeItem{Drove the reduction of support tickets by 2x and optimised the query response time by 57\% }
+        \resumeItem{ Developed scalable solution, reducing need for increased support staff }
+        \resumeItem{Conducted extensive research, integrating advanced conversational AI for client-centric project }
+        \resumeItem{Using LLMs, implemented Retrieval Augmented Generation (RAG) for improved interactions for 30+ clients }
+        \resumeItem{Reduced support tickets by 70\%, decreased escalation to experts by 30\% resulting in savings upto 100kE}
+        \resumeItem{Achieved 57\% average response time reduction and 75\% accuracy level}
+        \resumeItem{Collaborated directly with Director of Nokia, gaining invaluable mentorship}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -189,42 +181,63 @@
  %          \resumeItemListEnd
  %    \resumeSubHeadingListEnd
     
-    \resumeSubHeadingListStart
+    % \resumeSubHeadingListStart
+    %   \resumeProjectHeading
+    %       {\textbf{Feedback Prime }$|${ Android-Kotlin, Symbl.ai API, Sawo-Labs API } $|$ \textbf{\href{https://github.com/aniketk13/Feedback-Prime}{GitHub}}}{October 2021}
+    %       \resumeItemListStart
+    %        \resumeItem{\textbf{Smart Feedback Analysis} for Support Calls}
+    %        \resumeItem{Used \textbf{Symbl.ai Async API} and Sentiment Analysis to generate the report. \textbf{Retrofit} to make the Network Calls, \textbf{handled delays}, and used \textbf{RecyclerView} to display data }
+    %        \resumeItem{Avoids useless Feedback forms and helps the Support Engineers.}
+    %       \resumeItemListEnd
+    % \resumeSubHeadingListEnd
+
+ \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Feedback Prime }$|${ Android-Kotlin, Symbl.ai API, Sawo-Labs API } $|$ \textbf{\href{https://github.com/aniketk13/Feedback-Prime}{GitHub}}}{October 2021}
+          {\textbf{Suite-Converter } $|${ Python, Speech Recognition} $|$ \textbf{\href{https://github.com/aniketk13/Suite-Converter}{GitHub}} }{January 2021}
           \resumeItemListStart
-           \resumeItem{\textbf{Smart Feedback Analysis} for Support Calls}
-           \resumeItem{Used \textbf{Symbl.ai Async API} and Sentiment Analysis to generate the report. \textbf{Retrofit} to make the Network Calls, \textbf{handled delays}, and used \textbf{RecyclerView} to display data }
-           \resumeItem{Avoids useless Feedback forms and helps the Support Engineers.}
+          \resumeItem{Developed \textbf{one-stop solution} with \textbf{Voice Assistant} for major \textbf{file conversions}}
+          \resumeItem{Utilized libraries including \textbf{docx2pdf}, \textbf{pdf2docx}, \textbf{gTTS}, \textbf{SpeechRecognition}, and \textbf{pysttx3} for file conversions}
+          \resumeItem{Implemented \textbf{Auto-detection of Directory path} for organized file management}
           \resumeItemListEnd
-    \resumeSubHeadingListEnd
+    \resumeSubHeadingListEnd    
 %-----------PROGRAMMING SKILLS-----------
 \section{\textbf{Technical Skills}}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Kotlin, C++, Java, Python} \\
-     \textbf{Frameworks}{: PostgreSQL, Firebase, Node.js } \\
-     \textbf{Developer Tools}{: GitHub, Android-Studio, Azure, AWS, Postman, Google Cloud} \\
-     \textbf{Libraries}{: Room, Retrofit, MongoDB, Volley, Material Ui  }
+     \textbf{Languages}{: C++, Python, Kotin, Java, Javascript} \\
+     \textbf{Libraries/Frameworks}{: LlamaIndex, Langchain, Flask, Streamlit, Gunicorn, SQl, MongoDB, Room, Retrofit, Material UI, Firebase, Node.js } \\
+     \textbf{Developer Tools}{: Google Cloud, JupyterLab NoteBooks, AWS, GitHub, Jira, Postman, Android-Studio}
     }} 
  \end{itemize}
-   
+
+ %-----------EDUCATION-----------
+\section{\textbf{Education}}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Chandigarh University - 8.16 CGPA}{Mohali, Punjab}
+      {Final Year, B.E in Computer Science and Engineering}{August 2020 $-$ August 2024*}
+  % \resumeSubHeadingListEnd
+  % \resumeSubHeadingListStart
+    % \resumeSubheading
+    %   {Hem Sheela Model School - 94.6\%}{Durgapur, West Bengal}
+    %   {12th, Non-Medical Computer Science}{April 2018 $-$ March 2020 } 
+  \resumeSubHeadingListEnd
+  
 \section{\textbf{Licenses \& certifications}}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
         \resumeItemListStart
                 % \resumeItem{\textbf{\href{Link if any}{Best Achievement on Top}}: Write the best and coolest achievement on top.}
-                \resumeItem{\textbf{{Building an Android App with Jetpack Libraries}}}
-                \resumeItem{\textbf{{Android Development: Retrofit with Kotlin}}} 
-
-                \resumeItem{\textbf{{Cisco Networking Essentials}}} 
+                \resumeItem{{{Building an Android App with Jetpack Libraries}}}
+                \resumeItem{{{Android Development: Retrofit with Kotlin}}} 
+                \resumeItem{{{Cisco Networking Essentials}}}  
       \resumeItemListEnd
     }}
  \end{itemize}
     
 
 
-\vspace{1pt}\section{\textbf{Awards and Volunteer Experience}}
+\vspace{0.1mm}\section{\textbf{Awards and Volunteer Experience}}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
         \resumeItemListStart
@@ -237,6 +250,7 @@
       \resumeItemListEnd
     }}
  \end{itemize}
+
  
  
 \end{document}
