--- a/resume.tex
+++ b/resume.tex
@@ -141,11 +141,10 @@
       {Nokia}{Gurugram, Haryana}
       {AI Research \& Development Intern}{July 2023 - Present}
       \vspace{1pt}\resumeItemListStart
-        \resumeItem{ Developed scalable solution, reducing need for increased support staff }
-        \resumeItem{Conducted extensive research, integrating advanced conversational AI for client-centric project }
-        \resumeItem{Using LLMs, implemented Retrieval Augmented Generation (RAG) for improved interactions for 30+ clients }
-        \resumeItem{Reduced support tickets by 70\%, decreased escalation to experts by 30\% resulting in savings upto 100kE}
-        \resumeItem{Achieved 57\% average response time reduction and 75\% accuracy level}
+        \resumeItem{Conducted extensive research, integrating advanced conversational AI using \textbf{LlamaIndex}}
+        \resumeItem{Using \textbf{LLMs}, implemented Retrieval Augmented Generation (\textbf{RAG}) for improved interactions for \textbf{30+ clients} }
+        \resumeItem{Reduced support tickets by \textbf{70\%}, decreased escalation to experts by \textbf{30\%} resulting in \textbf{savings upto 100kE}}
+        \resumeItem{Achieved \textbf{57\%} average response time reduction and \textbf{75\%} accuracy level}
         \resumeItem{Collaborated directly with Director of Nokia, gaining invaluable mentorship}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
@@ -157,7 +156,7 @@
           {\textbf{Krishi-Sahyog } $|$ {Android-Kotlin, FireBase} $|$ \textbf{\href{https://github.com/aniketk13/FarmApp}{GitHub}}}{March 2023}
           \resumeItemListStart
           \resumeItem{Revolutionizing crop sales with a \textbf{Bidding-introduced} digital marketplace}
-          \resumeItem{Incorporated \textbf{MVVM} Architecture, Portal separation for both Farmer and Trader, used \textbf{Firebase} tools like \textbf{Auth}, \textbf{Firestore}, and \textbf{Storage}. \textbf{Multi-Language support} integrated with \textbf{Locale}}
+          \resumeItem{Incorporated \textbf{MVVM} Architecture, Portal separation for both Farmer and Trader, used \textbf{Firebase} tools like \textbf{Auth}, \textbf{Firestore}, and \textbf{Storage}. \textbf{Multi-Language support} integrated with Locale}
           \resumeItem{Increased earnings for farmers and received recognition from \textbf{Rajasthan CM}}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
